--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,10 +2,43 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
+
     {% if user.is_authenticated %}
-        <h1>hellow, world.</h1>
+    <table class="table table-striped table-hover table-bordered">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Address</th>
+            <th scope="col">City</th>
+            <th scope="col">State</th>
+            <th scope="col">Zipcode</th>
+            <th scope="col">Created_at</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% if records %}        
+            {% for record in records %}
+            <tr>
+                <td><a href="{% url 'record' record.id %}" class="">{{record.id}}</a></td>
+                <td>{{record.first_name}} {{record.last_name}}</td>
+                <td>{{record.email}}</td>
+                <td>{{record.phone}}</td>
+                <td>{{record.address}}</td>
+                <td>{{record.city}}</td>
+                <td>{{record.state}}</td>
+                <td>{{record.zipcode}}</td>
+                <td>{{record.created_at}}</td>
+            </tr>            
+            {% endfor %}
+        {% endif %}
+        </tbody>
+    </table>
+
     {% else %}
+    <div class="col-md-6 offset-md-3">
         <h1>Login</h1>
         <form action="{% url 'home' %}" method="POST">
             {% csrf_token %}
@@ -19,8 +52,9 @@
                 <button type="submit" class="btn btn-secondary">Submit</button>
             
         </form>
+    </div>
     {% endif %}
-</div>
+
 
 
 {% endblock %}
