--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -8,6 +8,9 @@
         <ul class="navbar-nav">
           {% if user.is_authenticated %}                 
           <li class="nav-item">
+            <a class="nav-link " href="{% url 'add_record' %}" aria-disabled="true">Add Record</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link " href="{% url 'logout' %}" aria-disabled="true">Logout</a>
           </li>
           {% else %}
